--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,26 +4,38 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
-    android:background="@color/gray_light"
+    android:layout_margin="15dp"
+    android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:elevation="3dp"
+    >
 
     <TextView
-        android:id="@+id/tv_serial"
+        android:id="@+id/tv_item_serial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:background="@color/purple_700"
+        android:padding="4dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        />
+
+    <ImageView
+        android:id="@+id/iv_item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@color/purple_700"
-        android:gravity="center"
-        android:padding="4dp"
-        android:textColor="@color/white"
-        android:textStyle="bold" />
+        android:importantForAccessibility="no"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/tv_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="5dp"
         android:background="@color/gray"
         android:gravity="center"
