--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#A3A3A3</color>
-    <color name="gray_light">#BDBDBD</color>
+    <color name="gray_light">#C5C5C5</color>
 </resources>
