--- a/app/src/main/res/layout/id_layout.xml
+++ b/app/src/main/res/layout/id_layout.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    tools:context=".MainActivity">
+    android:layout_margin="5dp">
 
     <ImageView
         android:id="@+id/iv_top_background"
@@ -20,11 +18,11 @@
         android:id="@+id/iv_logo_bjit_academy"
         android:layout_width="80dp"
         android:layout_height="100dp"
-        android:contentDescription="@string/logo_image"
         android:padding="3dp"
         android:src="@drawable/bjit_academy_logo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/logo_image" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -40,34 +38,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_students_info"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical"
-        android:foregroundGravity="left"
+        android:layout_margin="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo_bjit_academy"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_logo_bjit_academy" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!--    <?xml version="1.0" encoding="utf-8"?>-->
-    <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--tools:context=".MainActivity">-->
-
-    <!--<androidx.recyclerview.widget.RecyclerView-->
-    <!--    android:id="@+id/rv_parent_recycle_view"-->
-    <!--    android:layout_width="match_parent"-->
-    <!--    android:layout_height="match_parent"-->
-    <!--    android:scrollbars="vertical"-->
-    <!--    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />-->
-
-
-    <!--</FrameLayout>-->
