--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,18 +38,27 @@
         app:layout_constraintStart_toEndOf="@id/iv_logo_bjit_academy"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--    <EditText-->
+    <!--        android:id="@+id/et_search_text"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:hint="@string/search"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/iv_top_background"-->
+    <!--        app:layout_constraintBottom_toTopOf="@id/rv_students_info"-->
+    <!--        />-->
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_students_info"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="10dp"
-        android:scrollbars="vertical"
         android:foregroundGravity="left"
+        android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo_bjit_academy"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_top_background" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
